[package]
name = "clib"
version = "0.2.5"
edition = "2021"
authors = ["oooutlk <oooutlk@outlook.com>"
	,"Poor Yorick ethereum 0x0b5049C148b00a216B29641ab16953b6060Ef8A6 <FKZ07MMhpEiXkzJX5-HLfw9PsdeL_sKULlPCVSbBoZE@pooryorick.com>" ]
license = "AGPL-3.0"
keywords = [ "ffi", "bindgen", "pkg-config", "header", "binding" ]
readme = "README.md"
repository = "https://github.com/oooutlk/clib"
documentation = "https://docs.rs/clib"
categories = [ "external-ffi-bindings", "development-tools::ffi" ]
description = "Generates bindings for C libraries"

[build-dependencies]
anyhow = "1.0"
#bindgen = "0.64"
bindgen_helpers = "0.5"
inwelling = "0.5"
pkg-config = "0.3"
toml = "0.7.3"
